--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             >
           </li>
           <li>
-            <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia></a>
+            <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
           </li>
         </ul>
       </div>
